# mnist_LeNet5_CPPPY

./: CMakeLists.txt
mnist_LeNet5_CPPPY/: CMakeLists.txt  main.cpp
mnist_LeNet5_CPPPY/AlgCore/: alg_handle.cpp  alg_handle.h  engine.cpp  engine.h  evaluate.py  forward.py  logger.h  py_thread_state_lock.h  testing.py  train.py
mnist_LeNet5_CPPPY/CommMgr/: http_courier.cpp  http_courier.h  protocol_utils.cpp  protocol_utils.h
mnist_LeNet5_CPPPY/Common/: define.h  sysutils.cpp  sysutils.h
model/: model.ckpt-9001.index
res/: log.properties
